<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/lay_16"
    android:paddingLeft="@dimen/lay_16"
    android:paddingRight="@dimen/lay_16"
    android:paddingTop="@dimen/lay_16"
    tools:context="net.qiujuer.powerback.ankey.ui.activity.KeyCreateActivity">

    <net.qiujuer.genius.ui.widget.EditText
        android:id="@+id/edit_key"
        style="@style/key.edit.default"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_key_enter"
        android:inputType="textPassword"
        android:textColorHint="@drawable/ic_edit_hint"
        android:textCursorDrawable="@null" />

    <net.qiujuer.genius.ui.widget.EditText
        android:id="@+id/edit_key_confirm"
        style="@style/key.edit.default"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_key_confirm"
        android:inputType="textPassword"
        android:textColorHint="@drawable/ic_edit_hint"
        android:textCursorDrawable="@null" />

    <net.qiujuer.genius.ui.widget.Button
        android:id="@+id/btn_submit"
        style="@style/key.btn.red"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_44"
        android:layout_marginTop="@dimen/lay_32"
        android:text="@string/btn_key_verify_submit" />
</LinearLayout>
