<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/lay_16"
        android:paddingTop="@dimen/lay_32">

        <net.qiujuer.genius.ui.widget.TextView
            android:id="@+id/text_description"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/lay_8"
            android:layout_marginLeft="@dimen/font_16"
            android:layout_marginRight="@dimen/font_16"
            android:layout_marginTop="@dimen/lay_16"
            android:paddingLeft="@dimen/lay_8"
            android:paddingRight="@dimen/lay_8"
            android:text="@string/label_note_need"
            android:textColor="@color/white_alpha_240"
            app:gBorder="left"
            app:gBorderColor="@color/white_alpha_240"
            app:gBorderSize="3dp" />

        <LinearLayout
            android:id="@+id/lay_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <net.qiujuer.genius.ui.widget.TextView
                android:id="@+id/text_password"
                style="@style/TextAppearance.AppCompat.Subhead"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/lay_8"
                android:layout_marginLeft="@dimen/font_16"
                android:layout_marginRight="@dimen/font_16"
                android:layout_marginTop="@dimen/lay_8"
                android:layout_weight="1"
                android:paddingLeft="@dimen/lay_8"
                android:paddingRight="@dimen/lay_8"
                android:text="******************"
                android:textColor="@color/white_alpha_240" />

            <ImageButton
                android:layout_width="@dimen/size_20"
                android:layout_height="@dimen/size_20"
                android:layout_marginLeft="@dimen/font_16"
                android:layout_marginRight="@dimen/font_16"
                android:background="@color/white_alpha_240" />
        </LinearLayout>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/lay_16"
            android:paddingLeft="@dimen/lay_16"
            android:paddingRight="@dimen/lay_16"
            android:paddingTop="@dimen/lay_16">

            <net.qiujuer.genius.ui.widget.TextView
                android:id="@+id/edit_username"
                style="@style/key.text.default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_username" />

            <net.qiujuer.genius.ui.widget.TextView
                android:id="@+id/edit_site"
                style="@style/key.text.default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_site" />

            <net.qiujuer.genius.ui.widget.TextView
                android:id="@+id/edit_email"
                style="@style/key.text.default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_email" />

            <net.qiujuer.genius.ui.widget.TextView
                android:id="@+id/edit_qq"
                style="@style/key.text.default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_qq" />

            <net.qiujuer.genius.ui.widget.TextView
                android:id="@+id/edit_call"
                style="@style/key.text.default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_call" />

            <net.qiujuer.genius.ui.widget.TextView
                android:id="@+id/edit_remark"
                style="@style/key.text.default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/lay_16"
                android:singleLine="false"
                android:text="@string/label_remark" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>